# botowrapper

./: .gitignore  README.md  pyproject.toml
botowrapper/: AsyncS3Client.py  SyncS3Client.py  __init__.py  helpers.py
tests/: .cfg  test_async.py  tests_sync.py
